k8s-base-layer-deployment.yaml
###################################
# USERS
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    app: users
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: us-central1-docker.pkg.dev/class-adv2024-vueibaezis13/i2-project/users:1.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: service-users
  annotations:
    cloud.google.com/backend-config: '{"default": "users-config"}'
spec:
  type: NodePort
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31000
---
###################################
# POSTS
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts
  labels:
    app: posts
spec:
  replicas: 2
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: us-central1-docker.pkg.dev/class-adv2024-vueibaezis13/i2-project/posts:1.0
          ports:
            - containerPort: 3001
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: service-posts
  annotations:
    cloud.google.com/backend-config: '{"default": "posts-config"}'
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
      nodePort: 31001
---
###################################
# ROUTES
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: routes
  labels:
    app: routes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: routes
  template:
    metadata:
      labels:
        app: routes
    spec:
      containers:
        - name: routes
          image: us-central1-docker.pkg.dev/class-adv2024-vueibaezis13/i2-project/routes:1.0
          ports:
            - containerPort: 3002
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: service-routes
  annotations:
    cloud.google.com/backend-config: '{"default": "routes-config"}'
spec:
  type: NodePort
  selector:
    app: routes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
      nodePort: 31002
---
###################################
# OFFERS
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: offers
  labels:
    app: offers
spec:
  replicas: 2
  selector:
    matchLabels:
      app: offers
  template:
    metadata:
      labels:
        app: offers
    spec:
      containers:
        - name: offers
          image: us-central1-docker.pkg.dev/class-adv2024-vueibaezis13/i2-project/offers:1.0
          ports:
            - containerPort: 3003
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: service-offers
  annotations:
    cloud.google.com/backend-config: '{"default": "offers-config"}'
spec:
  type: NodePort
  selector:
    app: offers
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3003
      nodePort: 31003
